{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 28,
  "lineage": "941db4e1-9f04-7609-cab1-7542cb9b74d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:loadbalancer/app/talktechapp-server-default-alb/1f7091d1552e1792",
            "arn_suffix": "app/talktechapp-server-default-alb/1f7091d1552e1792",
            "desync_mitigation_mode": "defensive",
            "dns_name": "talktechapp-server-default-alb-1179014648.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:423034623243:loadbalancer/app/talktechapp-server-default-alb/1f7091d1552e1792",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "talktechapp-server-default-alb",
            "security_groups": [
              "sg-019b3b313b0882665"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a173aa8212bb88d"
              },
              {
                "subnet_id": "subnet-06673f8951883b2e7"
              }
            ],
            "subnets": [
              "subnet-03a173aa8212bb88d",
              "subnet-06673f8951883b2e7"
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-ALB",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-ALB",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener/app/talktechapp-server-default-alb/1f7091d1552e1792/b71dd8ef932e19c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener/app/talktechapp-server-default-alb/1f7091d1552e1792/b71dd8ef932e19c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:loadbalancer/app/talktechapp-server-default-alb/1f7091d1552e1792",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener/app/talktechapp-server-default-alb/1f7091d1552e1792/7774c825ed1bfe6d",
            "certificate_arn": "arn:aws:acm:us-east-1:423034623243:certificate/3145ce42-8e96-4c5a-a478-4930844c9feb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:targetgroup/talktechapp-server-default-tg/840cea016aa11778",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener/app/talktechapp-server-default-alb/1f7091d1552e1792/7774c825ed1bfe6d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:loadbalancer/app/talktechapp-server-default-alb/1f7091d1552e1792",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.dev_cert",
            "aws_acm_certificate_validation.cert_validation",
            "aws_alb.application_load_balancer",
            "aws_alb_target_group.server_backend_tg",
            "aws_route53_record.cert_validation_record",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main",
            "data.aws_route53_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:targetgroup/talktechapp-server-default-tg/840cea016aa11778",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener-rule/app/talktechapp-server-default-alb/1f7091d1552e1792/b71dd8ef932e19c0/a2e8e5bc4cf21a23",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener-rule/app/talktechapp-server-default-alb/1f7091d1552e1792/b71dd8ef932e19c0/a2e8e5bc4cf21a23",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:listener/app/talktechapp-server-default-alb/1f7091d1552e1792/b71dd8ef932e19c0",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_alb_listener.alb_http_listener",
            "aws_alb_target_group.server_backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "server_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:423034623243:targetgroup/talktechapp-server-default-tg/840cea016aa11778",
            "arn_suffix": "targetgroup/talktechapp-server-default-tg/840cea016aa11778",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 120,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 100,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:423034623243:targetgroup/talktechapp-server-default-tg/840cea016aa11778",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "talktechapp-server-default-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "cookie_name": "session",
                "enabled": true,
                "type": "app_cookie"
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-tg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-tg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "target_type": "instance",
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02baa6eb066b7a2f5",
            "association_id": "eipassoc-05ee29a733a2e1007",
            "domain": "vpc",
            "id": "eipalloc-02baa6eb066b7a2f5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08bb081d07626fe1c",
            "private_dns": "ip-10-0-1-157.ec2.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-34-225-247-225.compute-1.amazonaws.com",
            "public_ip": "34.225.247.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-eip",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-eip",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d69c34f7a0bf36a",
            "arn": "arn:aws:ec2:us-east-1:423034623243:instance/i-0a3a7eb6eebd8bb72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3a7eb6eebd8bb72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "talktechappKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0968987bf4b486158",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-34-207-111-238.compute-1.amazonaws.com",
            "public_ip": "34.207.111.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0856f3080c53ba691",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06673f8951883b2e7",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-bastion-host",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-bastion-host",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f58fec3ec224a73"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main",
            "data.aws_ami.ec2_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:internet-gateway/igw-0f2423439b569fb68",
            "id": "igw-0f2423439b569fb68",
            "owner_id": "423034623243",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-vpc-igw",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-vpc-igw",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02baa6eb066b7a2f5",
            "connectivity_type": "public",
            "id": "nat-0d7a20e85fad92dd6",
            "network_interface_id": "eni-08bb081d07626fe1c",
            "private_ip": "10.0.1.157",
            "public_ip": "34.225.247.225",
            "subnet_id": "subnet-06673f8951883b2e7",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-nat-gw",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-nat-gw",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d9fe287dfdbd60d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d7a20e85fad92dd6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d9fe287dfdbd60d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2423439b569fb68",
            "id": "r-rtb-0e16f899ea9f776fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e16f899ea9f776fc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:route-table/rtb-06d9fe287dfdbd60d",
            "id": "rtb-06d9fe287dfdbd60d",
            "owner_id": "423034623243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7a20e85fad92dd6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-RT",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-RT",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:route-table/rtb-0e16f899ea9f776fc",
            "id": "rtb-0e16f899ea9f776fc",
            "owner_id": "423034623243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2423439b569fb68",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-RT",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-RT",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8444ae47c441bca",
            "route_table_id": "rtb-06d9fe287dfdbd60d",
            "subnet_id": "subnet-062a3818fd3e842a9"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096fba40f9a78472d",
            "route_table_id": "rtb-06d9fe287dfdbd60d",
            "subnet_id": "subnet-02ae9eb6209c45e23"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0802a01624d0df6e4",
            "route_table_id": "rtb-0e16f899ea9f776fc",
            "subnet_id": "subnet-06673f8951883b2e7"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e33a2ba3c1b09f14",
            "route_table_id": "rtb-0e16f899ea9f776fc",
            "subnet_id": "subnet-03a173aa8212bb88d"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:security-group/sg-019b3b313b0882665",
            "description": "Allows traffic through the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019b3b313b0882665",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTP traffic to load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTPS traffic to load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "talktechapp-server-default-alb-sg",
            "name_prefix": "",
            "owner_id": "423034623243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-alb-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-alb-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:security-group/sg-031b68f9f234f4a28",
            "description": "Allows internet access for instances lauched with ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031b68f9f234f4a28",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows HTTP traffic into webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019b3b313b0882665"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allows HTTPS traffic into webserver",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019b3b313b0882665"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019b3b313b0882665"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f58fec3ec224a73"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "talktechapp-server-default-autoscaling-group-sg",
            "name_prefix": "",
            "owner_id": "423034623243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-autoscaling-group-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-autoscaling-group-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:security-group/sg-09f58fec3ec224a73",
            "description": "Allows SSH into bastion host instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f58fec3ec224a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.36/32"
                ],
                "description": "Allows SSH into bastion host instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "talktechapp-server-default-bastion-host-sg",
            "name_prefix": "",
            "owner_id": "423034623243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-bastion-host-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-bastion-host-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:security-group/sg-0e3dd6aadd98a90af",
            "description": "Allows access to elasticache service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3dd6aadd98a90af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through ASG",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031b68f9f234f4a28"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through bastion host",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f58fec3ec224a73"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "talktechapp-server-default-elasticache-sg",
            "name_prefix": "",
            "owner_id": "423034623243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-elasticache-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-elasticache-sg",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.autoscaling_group_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:subnet/subnet-062a3818fd3e842a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062a3818fd3e842a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423034623243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-1a",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-1a",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:subnet/subnet-02ae9eb6209c45e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ae9eb6209c45e23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423034623243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-1b",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-private-1b",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:subnet/subnet-06673f8951883b2e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06673f8951883b2e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423034623243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-1a",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-1a",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:subnet/subnet-03a173aa8212bb88d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a173aa8212bb88d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423034623243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-1b",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default-public-1b",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "vpc_id": "vpc-016e9836d4e80d9ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423034623243:vpc/vpc-016e9836d4e80d9ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d3d86d22fa7912d",
            "default_route_table_id": "rtb-0773f6fda868db2c5",
            "default_security_group_id": "sg-08db1ff77ec42b71c",
            "dhcp_options_id": "dopt-0857d28f57550f851",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016e9836d4e80d9ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0773f6fda868db2c5",
            "owner_id": "423034623243",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "talktechapp-server-default",
              "Owner": "Mia Jacobs",
              "Project": "talktechapp-server"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}